--- a/natours-project/sass/pages/_home.scss
+++ b/natours-project/sass/pages/_home.scss
@@ -6,7 +6,7 @@
 
 .section-features {
     padding: 20rem 0;
-    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(/images/nat-4.jpg);
+    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(/natours-project/images/nat-4.jpg);
     background-size: cover;
     margin-top: -10rem;
 
@@ -38,7 +38,7 @@
                                     rgba($color-white, .9) 0%,
                                     rgba($color-white, .9) 50%,
                                     transparent 50%),
-                                    url(/images/nat-10.jpg);                    
+                                    url(/natours-project/images/nat-10.jpg);                    
     background-size: 100%; 
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: .2); 
